[project]
name = "linkedevents"
requires-python = ">=3.12, <3.13"
version = "3.29.0"
dependencies = [
    "attrs",
    "beautifulsoup4",
    "bleach",
    "django-admin-autocomplete-filter",
    "django-cleanup",
    "django-cors-headers",
    "django-csp",
    "django-environ",
    "django-filter",
    "django-haystack",
    "django-helusers",
    "django-helsinki-health-endpoints",
    "django-image-cropping",
    "django-jinja",
    "django-leaflet",
    "django-logger-extra",
    "django-mailer",
    "django-modeltranslation",
    "django-mptt",
    "django-munigeo",
    "django-orghierarchy",
    # Pinned: django-parler 2.4 replaced `unique_together` on translation models
    # with a named `UniqueConstraint`, which makes `makemigrations` detect drift
    # for the third-party munigeo app (whose migrations still use
    # `unique_together`). Stay on 2.3 until munigeo ships compatible migrations.
    "django-parler==2.3",
    "django-redis",
    "django-resilient-logger",
    "django-rest-knox",
    "django-reversion",
    "django-searchable-encrypted-fields",
    "djangorestframework",
    "djangorestframework-bulk",
    "djangorestframework-gis",
    "django~=5.2",
    "drf-oidc-auth",
    "drf-spectacular",
    "easy-thumbnails",
    "elasticsearch<8",
    "helsinki-profile-gdpr-api",
    "httmock",
    "icalendar",
    "ipython",
    "isodate",
    "jinja2",
    "langdetect",
    "libvoikko",
    "lxml",
    "markdown",
    "num2words",
    "pillow",
    "psycopg[c]",
    "pyYAML",
    "python-dateutil",
    "python-docx",
    "rdflib==6.3.2",
    "regex",
    "requests",
    "requests-cache",
    "sentry-sdk[django]",
    "social-auth-app-django",
    "social-auth-core",
    "whitenoise",
    "xlsxwriter",
]

[dependency-groups]
dev = [
    "Werkzeug",
    "django-anymail",
    "django-debug-toolbar",
    "django-extensions",
    "django-test-migrations",
    "factory-boy",
    "freezegun",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-factoryboy",
    "pytest-freezer",
    "python-jose",
    "requests-mock",
    "snakemd",
]
prod = [
    "uwsgi",
    "uwsgitop",
]

[tool.uv]
package = false
exclude-newer = "P3D"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
]
extend-per-file-ignores = { "*/migrations/*" = ["E501"], "*/tests/*" = ["E501"] }


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "linkedevents.test_settings"
norecursedirs = [".git", "venv"]
